# SmartSell

./: .env.example  .env.example.prod  .gitattributes  .gitignore  .pre-commit-config.yaml  ASSESSMENT_SUMMARY.txt  ASSESSMENT_VALIDATION.md  BOT_USAGE.md  CHANGELOG.md  DEV_BOT.md  Dockerfile  EXECUTIVE_SUMMARY.md  FASTAPI_COMPLIANCE.md  KASPI_AUTOSYNC_IMPLEMENTATION.md  KASPI_SYNC_MVP_SUMMARY.md  LICENSE  MERGE_SUMMARY.md  MVP_ASSESSMENT_README.md  MVP_READINESS_ASSESSMENT.md  Makefile  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_JOURNAL.md  QUICK_REFERENCE.md  README.md  SMARTSELL_API_LIFECYCLE_POLICY.md  SMARTSELL_BILLING_FAILURE_POLICY.md  SMARTSELL_BILLING_STATE_MACHINE.md  SMARTSELL_DATA_RETENTION_POLICY.md  SMARTSELL_DR_RESTORE_DRILL.md  SMARTSELL_EXECUTION_BOARD.md  SMARTSELL_FIRST_CLIENT_LAUNCH_CLOSURE_PLAN.md  SMARTSELL_FIRST_CLIENT_LAUNCH_SCORECARD.md  SMARTSELL_FULL_TENANT_SIMULATION.md  SMARTSELL_INCIDENT_PROCESS.md  SMARTSELL_KASPI_SUPPORT_VISIBILITY.md  SMARTSELL_LAUNCH_CHECKLIST.md  SMARTSELL_LAUNCH_VERDICT.md  SMARTSELL_MASTER_OPERATING_VISION.md  SMARTSELL_ONBOARDING_DRY_RUN.md  SMARTSELL_ONBOARDING_PLAYBOOK.md  (+46 more)
.github/bot/: apply.py
.github/workflows/: automerge.yml  bot.yml  cd.yml  ci-cd.yml  ci-sanity.yml  ci.yml  security.yml
_alembic_backup/alembic/: env.py
alembic/: env.py
alembic/versions/: 1f107bc8bf2e_add_comprehensive_fastapi_models_and_.py  20240914_add_campaign_and_audit_models.py  20251003_create_customers.py  20251003_create_inventory_outbox.py  20251003_update_payments_customer_fk.py  2657f8ff8aa1_fix_table_creation_order_and_foreign_.py  37880826cca6_increase_alembic_version_version_num_to_.py  486a8942dd7e_merge_heads.py  b0975f9de58d_fix_models_and_relations.py  c4c8623bc099_initial_migration.py
app/: __init__.py  main.py  main_helpers.py  main_middleware_helpers.py  main_payload_helpers.py  main_registration_helpers.py  swagger.py
app/api/: __init__.py  auth.py
app/cli/: __init__.py  reset_password.py
app/core/: __init__.py  alembic_autogen.py  api_lifecycle.py  config.py  crypto.py  customer_lifecycle.py  data_retention.py  db.py  db_bootstrap.py  dependencies.py  entitlements.py  errors.py  exceptions.py  features.py  idempotency.py  logging.py  money.py  provider_registry.py  quotas.py  rate_limiter.py  rbac.py  redis_client.py  security.py  support_workflow.py  tenant_lifecycle.py
app/database/: base.py  session.py
app/dev/: seed.py
app/integrations/: __init__.py  errors.py  kaspi_adapter.py  mobizon.py  sms_base.py
app/models/: __init__.py  audit_log.py  base.py  billing.py  campaign.py  catalog_import.py  company.py  customer.py  idempotency_key.py  integration_event.py  integration_provider.py  integration_provider_config.py  inventory_outbox.py  invitation.py  kaspi_catalog_item.py  kaspi_catalog_product.py  kaspi_feed_export.py  kaspi_feed_public_token.py  kaspi_feed_upload.py  kaspi_goods_import.py  kaspi_import_run.py  kaspi_mc_session.py  kaspi_offer.py  kaspi_order_sync_state.py  kaspi_token.py  kaspi_trial_grant.py  order.py  (+14 more)
docs/: BACKUP_RESTORE.md  BRANCHING.md  CI_HANG_DIAGNOSTIC_REPORT.md  CORE_PROD_PLAN.md  DB_AUDIT_20251228_142944.md  DB_SETUP.md  DB_SETUP_20251228_155143.md  DB_SETUP_20251228_155221.md  DB_SETUP_20251228_155723.md  DB_SETUP_20251228_155746.md  DB_SETUP_20251228_155832.md  DB_SETUP_20251228_155907.md  DB_SETUP_20251228_160034.md  DB_SETUP_20251228_161728.md  DB_SETUP_20251228_161959.md  DB_SETUP_20251228_162836.md  DB_SETUP_20251228_162945.md  DB_SETUP_20251228_181526.md  DB_SETUP_20251228_181541.md  DB_SETUP_20251228_181610.md  DB_SETUP_20251228_181658.md  DB_SETUP_20251228_182038.md  DB_SETUP_20251228_183309.md  DB_SETUP_20251228_184045.md  DB_SETUP_20251228_184301.md  DB_SETUP_20251228_184656.md  DB_SETUP_20251228_184804.md  DB_SETUP_20251228_184828.md  DB_SETUP_20251228_184934.md  DB_SETUP_20251228_184959.md  DECISIONS.md  DEPLOYMENT.md  DEPLOY_MINIMAL_PROD.md  ENGINEERING_JOURNAL.md  KASPI_AUTOSYNC_MUTUAL_EXCLUSION.md  KASPI_FEED.md  KASPI_SYNC_RUNNER.md  MIGRATIONS_POLICY.md  OBJECTIVE.md  OPERATOR_DEPLOY_TRANSCRIPT_2026-03-09.md  (+22 more)
files 10/: Dockerfile  README.md
files_10/: docker-compose.yml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
migrations/: alembic_autogen_filters.py  env.py
scripts/: Smoke-IntegrationCenter.ps1  _smoke-lib.ps1  kaspi_httpx_probe.py  openapi_report.py  prod-gate.ps1  smoke-admin-campaign-cleanup.ps1  smoke-admin-campaign-queue.ps1  smoke-auth.ps1  smoke-campaigns-e2e.ps1  smoke-core.ps1  smoke-kaspi-sync-now.ps1  smoke-openapi.ps1  smoke-preorders-e2e.ps1  smoke-reports-all.ps1  smoke-reports-order-items.ps1  smoke-reports-orders-pdf.ps1  smoke-reports-orders.ps1  smoke-reports-sales-pdf.ps1  smoke-reports-wallet-transactions.ps1  smoke-repricing-e2e.ps1  smoke-tenant-prepare.ps1
tests/: _compat.py  conftest.py  test_admin_integrations.py  test_admin_routes_platform_only_contract.py  test_alembic_autogen_include_object.py  test_alembic_autogenerate_filters_unit.py  test_alembic_version_length.py  test_auth_abuse_limits.py  test_auth_csrf_cookie_mode.py  test_auth_refresh_logout_limits.py  test_backup_restore_docs.py  test_billing_wallet_topup.py  test_campaigns.py  test_config.py  test_core_startup_hook_guards.py  test_csrf_secret_required_in_prod.py  test_db_async_url_resolution.py  test_db_password_pgpass.py  test_db_runtime_vs_test_selection.py  test_db_url_priority.py  test_debug_db_endpoint.py  test_deploy_guide.py  test_e2e_platform.py  test_env_example.py  test_error_contract.py  test_feature_flags.py  test_health_and_ready.py  test_invite_reset_tokens_require_dedicated_secrets_in_prod.py  test_kaspi_autosync.py  test_kaspi_autosync_mutual_exclusion.py  test_kaspi_feed_exports.py  test_kaspi_orders_sync_runner.py  test_kaspi_products_catalog_sync.py  test_kaspi_status_api.py  test_kaspi_stub_prod.py  test_kaspi_trial_grants.py  test_messaging_provider.py  test_migration_upgrade.py  test_mobizon_provider.py  test_models.py  (+26 more)
tools/: db_reset.ps1  inspect_models.py  utf8_probe.ps1  utf8_probe.sql
(+603 files in other folders)
